[package]
name = "Server_Example"
version = "0.1.0"
authors = ["TheSR <TheSR@TheSR.live>"]
edition = "2021"
description = "Example Server Using Rocket which has HTTP(S), WebSocket, DB and UDP Support"
repository = "https://github.com/TheSR007/Rust_Projects/tree/master/Server_Example"
documentation = "https://docs.rs/Server_Example/"
readme = "README.MD"
keywords = ["Server", "HTTP(S)", "WebSocket", "Enet", "MongoDB"]
license = "GPL"
exclude = [
    "build", # Prebuilds for github
]

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
rocket_ws = "0.1.1"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
enet = "0.3.0"
anyhow = "1.0.86"

[[bin]]
name = "enet_client"
path = "src/enet_client.rs"

